Optionals refactor